add reponsive design for mat-icon

--- a/Frontend/Cantine/src/assets/styles/new-meal.component.scss
+++ b/Frontend/Cantine/src/assets/styles/new-meal.component.scss
@@ -81,6 +81,12 @@
     .second {
       width: 100%;
     }
+    .form-container {
+      mat-icon {
+        top: 1vh;
+        left: 94%;
+      }
 
+    }
   }
   }
