--- a/Frontend/Cantine/src/app/admin/meals/new-meal/new-meal.component.html
+++ b/Frontend/Cantine/src/app/admin/meals/new-meal/new-meal.component.html
@@ -8,7 +8,7 @@
                 </div>
                 <h1 class="center"> Ajouter un Plat </h1>
                 <div class="register-form ">
-                    <form [formGroup]="newMeal" (ngSubmit)="onSubmit()">
+                    <form [formGroup]="newMeal">
 
 
                         <!---------------------- label --------------------------->
