--- a/Frontend/Cantine/src/app/admin/meals/validator-dialog/validator-dialog.component.html
+++ b/Frontend/Cantine/src/app/admin/meals/validator-dialog/validator-dialog.component.html
@@ -1,28 +1,34 @@
-<div class="global" >
-<div class="center"><img width="60px" src="../../../../assets/images/add-icon.png" ></div>
-<h1 mat-dialog-title>{{message}}</h1>
-<div class="btns">
-    <div ><button class="btn btn-primary" mat-dialog-close >Annuler</button></div>
-    <div ><button class="btn btn-primary"  >valider</button></div>
+<div class="global  ">
+    <div class="center"><img width="60px" src="../../../../assets/images/add-icon.png"></div>
+    <h1 mat-dialog-title class="center">{{message}}</h1>
+    <div class="btns">
+        <div>
+            <button class="btn btn-primary" mat-dialog-close>Annuler</button>
+        </div>
+        <div>
+            <button class="btn btn-primary">valider</button>
+        </div>
+    </div>
 </div>
-</div>
-
 <style>
+    .mat-dialog-container {
+        background: red;
+    }
 
-    .global{
-        margin:10px ;
+    .global {
+        margin: 5% auto 5% auto;
 
     }
-    .btns{
+
+    .btns {
         display: flex;
         justify-content: space-around;
-        margin-top: 20px;
+
     }
-    img{
-        margin-top: 20px;
-    }
-    mat-dialog-container{
-        background: red !important;
+
+    @media (max-width: 992px) {
+
+
     }
 
 </style>
