make service to  send  new menu to db

--- a/Frontend/Cantine/src/app/admin/meals/new-meal/new-meal.component.html
+++ b/Frontend/Cantine/src/app/admin/meals/new-meal/new-meal.component.html
@@ -155,9 +155,8 @@
                                    placeholder="Le prix du  Plat "
                                    type="file"
                                    id="image"
-                                   accept="image/png, image/jpeg,  image/svg"
-                                   name="image"
-                                   title="Choisissez une  image pour le plat"
+                                   accept="image/png, image/jpeg"
+                                   (change)="onChange ($event)"
                             />
 
                             <div *ngIf="submitted && f['image'].errors" class="invalid-feedback">
