add home page for meal module

--- a/Frontend/Cantine/src/app/admin/home-admin/home-admin.component.html
+++ b/Frontend/Cantine/src/app/admin/home-admin/home-admin.component.html
@@ -1,3 +1,4 @@
 <div class="center">
-       <button class="btn"> new Meal  </button>
+       <button  (click)="goto()" class="btn"> toward  Meals  </button>
+       <button  (click)="goto()" class="btn">  toward Menus  </button>
 </div>
