update router in  mealsModule

--- a/Frontend/Cantine/src/app/admin/home-admin/home-admin.component.html
+++ b/Frontend/Cantine/src/app/admin/home-admin/home-admin.component.html
@@ -1,4 +1,4 @@
 <div class="center">
-       <button  (click)="goto()" class="btn"> toward  Meals  </button>
+       <button  (click)="gotoMeals()" class="btn"> toward  Meals  </button>
        <button  (click)="goto()" class="btn">  toward Menus  </button>
 </div>
