--- a/Frontend/Cantine/src/app/core-cantine/main-core-cantine/main-core-cantine.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/main-core-cantine/main-core-cantine.component.html
@@ -81,7 +81,7 @@
         <main>    <!-- content  -->
             <router-outlet></router-outlet>     <!--  main  container  -->
         </main>
-        <!--<app-main-footer></app-main-footer>-->
+        <app-main-footer></app-main-footer>
     </mat-sidenav-content>
 </mat-sidenav-container>
 
