add main-meals  componant router  of meal module

--- a/Frontend/Cantine/src/app/admin/meals/all-meals/all-meals.component.html
+++ b/Frontend/Cantine/src/app/admin/meals/all-meals/all-meals.component.html
@@ -1,5 +1,5 @@
 <div>
-         <div (click)="gotoNewMeal()" class="center"> <button  class="btn">Ajouter  un  Plat</button>  </div>
+         <div class="center"  routerLink="/new"> <button  class="btn">Ajouter  un  Plat</button>  </div>
 
 
 </div>
