change the main reouter

--- a/Frontend/Cantine/src/app/admin/meals/all-meals/all-meals.component.html
+++ b/Frontend/Cantine/src/app/admin/meals/all-meals/all-meals.component.html
@@ -1,6 +1,6 @@
 <div>
          <div class="center"  routerLink="/new"> <button  class="btn">Ajouter  un  Plat</button>  </div>
-
+           <h1> tous Les  menus  Doivents  etre    ici  </h1>
 
 </div>
 
