update    meal  service

--- a/Frontend/Cantine/src/app/admin/meals/validator-dialog/validator-dialog.component.html
+++ b/Frontend/Cantine/src/app/admin/meals/validator-dialog/validator-dialog.component.html
@@ -6,7 +6,7 @@
             <button class="btn btn-primary" mat-dialog-close>Annuler</button>
         </div>
         <div>
-            <button class="btn btn-primary">valider</button>
+            <button class="btn btn-primary" (click)="validate()" >valider</button>
         </div>
     </div>
 </div>
