update getAll Meals from Admin Module

--- a/Frontend/Cantine/src/app/admin/meals/new-meal/new-meal.component.html
+++ b/Frontend/Cantine/src/app/admin/meals/new-meal/new-meal.component.html
@@ -171,7 +171,7 @@
                             <div class="btn-save center">
                                 <button (click)="onSubmit()" class="btn"> Enregistrer</button>
                             </div>
-                            <span><mat-icon>arrow_back</mat-icon></span>
+                            <span (click)="goback()"><mat-icon>arrow_back</mat-icon></span>
                         </div>
 
                     </form>
