--- a/Frontend/Cantine/src/app/admin/meals/all-meals/all-meals.component.html
+++ b/Frontend/Cantine/src/app/admin/meals/all-meals/all-meals.component.html
@@ -1,6 +1,30 @@
-<div>
-         <div class="center"  routerLink="/new"> <button  class="btn">Ajouter  un  Plat</button>  </div>
-           <h1> tous Les  menus  Doivents  etre    ici  </h1>
 
-</div>
+         <div class="center"> <button  class="btn" (click)="gotoNewMeal()" >Ajouter  un  Plat</button>  </div>
+
+
+    <h1 class="center"> Nos  Plats   </h1>
+
+    <div  class="container" >
+        <div class="row">
+            <div *ngFor="let meal of meals$ |async " class="col m4 s12" >
+                <div class="card horizontal">
+                    <div class="center">
+                        <img  [src]="meal.image" height="190px" width="40%"   />
+
+                                    <div class="card-stacked">
+                                        <div class="card-content">
+                                            <p> plat :   {{meal.label}}</p>
+                                            <p> catégorie :  {{meal.category}}</p>
+                                            <p> description  : {{meal.description}}</p>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <button class="btn"> Modifier Le  Plat </button>
+                                    </div>
+                                </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
