--- a/Frontend/Cantine/src/app/admin/meals/dialogs/validator-dialog/validator-dialog.component.html
+++ b/Frontend/Cantine/src/app/admin/meals/dialogs/validator-dialog/validator-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="global  ">
-    <div class="center"><img width="60px" src="../../../../assets/images/add-icon.png"></div>
+    <div class="center"><img width="60px" src="../../../../../assets/images/add-icon.png"></div>
     <h1 mat-dialog-title class="center">{{message}}</h1>
     <div class="btns">
         <div>
