add  update Meal  To   Meal module  router

--- a/Frontend/Cantine/src/app/admin/meals/all-meals/all-meals.component.html
+++ b/Frontend/Cantine/src/app/admin/meals/all-meals/all-meals.component.html
@@ -19,7 +19,7 @@
                                         </div>
                                     </div>
                                     <div>
-                                        <button class="btn"> Modifier Le  Plat </button>
+                                        <button class="btn" (click)="updateMeal(meal.id)"> Modifier Le  Plat </button>
                                     </div>
                                 </div>
                 </div>
