--- a/Frontend/Cantine/src/app/sharedmodule/dialogs/exception-dialog/exception-dialog.component.html
+++ b/Frontend/Cantine/src/app/sharedmodule/dialogs/exception-dialog/exception-dialog.component.html
@@ -1,5 +1,5 @@
 <div class="global  ">
-    <div class="center"><img width="80px" src="../../../../../assets/images/wrong.png"></div>
+    <div class="center"><img width="80px" src="../../../../assets/images/wrong.png"></div>
     <h1 mat-dialog-title class="center">{{message}}</h1>
     <div class="center">
             <button  class="btn btn-primary" mat-dialog-close> OK </button>
