--- a/Frontend/Cantine/src/app/admin/meals/all-meals/all-meals.component.html
+++ b/Frontend/Cantine/src/app/admin/meals/all-meals/all-meals.component.html
@@ -16,6 +16,7 @@
                                             <p> plat :   {{meal.label}}</p>
                                             <p> catégorie :  {{meal.category}}</p>
                                             <p> description  : {{meal.description}}</p>
+                                            <p> prix  : {{meal.price}} £ </p>
                                         </div>
                                     </div>
                                     <div>
