--- a/Frontend/Cantine/src/app/admin/meals/all-meals/all-meals.component.html
+++ b/Frontend/Cantine/src/app/admin/meals/all-meals/all-meals.component.html
@@ -1,13 +1,12 @@
 
-         <div class="center"> <button  class="btn" (click)="gotoNewMeal()" >Ajouter  un  Plat</button>  </div>
+         <div class="center" style="margin: 20px"> <button  class="btn" (click)="gotoNewMeal()" >Ajouter  un  Plat</button>  </div>
 
 
-    <h1 class="center"> Nos  Plats   </h1>
 
     <div  class="container" >
         <div class="row">
-            <div *ngFor="let meal of meals$ |async " class="col m4 s12" >
-                <div class="card horizontal">
+            <div *ngFor="let meal of meals$ |async " class="col m4 s12"  >
+                <div class="card horizontal " >
                     <div class="center">
                         <img  [src]="meal.image" height="190px" width="40%"   />
 
@@ -17,6 +16,7 @@
                                             <p> catégorie :  {{meal.category}}</p>
                                             <p> description  : {{meal.description}}</p>
                                             <p> prix  : {{meal.price}} £ </p>
+                                            <p><span *ngIf="meal.status == 1 ">  Disponible  </span><span *ngIf="meal.status == 0 ">  Pas  Disponible  </span></p>
                                         </div>
                                     </div>
                                     <div>
