add Menu  Dialogue to  add  Meals Contain Menu

--- a/Frontend/Cantine/src/app/admin/menus/all-menus/all-menus.component.html
+++ b/Frontend/Cantine/src/app/admin/menus/all-menus/all-menus.component.html
@@ -1,5 +1,5 @@
 <div class="center" style="margin: 20px">
-    <button class="btn">Ajouter un  Menu </button>
+    <button class="btn" (click)="addMenu()">Ajouter un  Menu </button>
 </div>
 <div class="container">
     <div class="row">
