--- a/Frontend/Cantine/src/app/admin/menus/new-menu/new-menu.component.html
+++ b/Frontend/Cantine/src/app/admin/menus/new-menu/new-menu.component.html
@@ -1,1 +1,194 @@
-<p>new-menu works!</p>
+<div class="container first  first-container">
+    <div class="row first">
+        <div class="container second">
+            <div class="row">
+                <div class="text-center">
+                    <img alt="logo" class="form-logo" src="../../../../assets/images/logo.png" width="80px">
+                    <h4 class="mt-1 mb-5 pb-1"> Cantinière</h4>
+                </div>
+                <h1 class="center"> Ajouter un Plat </h1>
+
+                <div class="register-form ">
+                    <form [formGroup]="newMenu">
+
+                        <!---------------------- label --------------------------->
+                        <div class="form-group ">
+                            <label for="label"> Nom </label>
+                            <input [ngClass]="{ 'is-invalid': submitted && f['label'].errors }" class="form-control"
+                                   formControlName="label"
+                                   placeholder="Le Nom du  Menu "
+                                   type="text"
+                                   id="label"
+                            />
+                            <div *ngIf="submitted && f['label'].errors" class="invalid-feedback">
+                                <div *ngIf="f['label'].errors['required']" class="center"> Nom du plat est requis</div>
+                                <div *ngIf="f['label'].errors['maxlength']" class="center">
+                                    le nom du plat ne doit pas dépasser 60 charctéres
+                                </div>
+                                <div *ngIf="f['label'].errors['minlength']" class="center">
+                                    le nom du plat ne doit avoir au minimum de 3 charctéres
+                                </div>
+                            </div>
+                        </div>
+
+                        <!---------------------- description --------------------------->
+                        <div class="form-group">
+                            <label for="description"> Description </label>
+                            <textarea [ngClass]="{ 'is-invalid': submitted && f['description'].errors }"
+                                      class="form-control" formControlName="description"
+                                      placeholder=" Description du  Menu "
+                                      type="text"
+                                      id="description"
+                            > </textarea>
+                            <div *ngIf="submitted && f['description'].errors" class="invalid-feedback">
+                                <div *ngIf="f['description'].errors['required']" class="center"> Description du plat est
+                                    requis
+                                </div>
+                                <div *ngIf="f['description'].errors['maxlength']" class="center">
+                                    Description du plat ne doit pas dépasser 1700 charctéres
+                                </div>
+                                <div *ngIf="f['description'].errors['minlength']" class="center">
+                                    Description du plat ne doit avoir au minimum de 5 charctéres
+                                </div>
+                            </div>
+                        </div>
+
+                        <!---------------------- price --------------------------->
+                        <div class="form-group">
+                            <label for="price">Le prix </label>
+                            <div class="form-container">
+                                <input
+                                        [ngClass]="{ 'is-invalid': submitted && f['price'].errors }"
+                                        class="form-control"
+                                        formControlName="price"
+                                        placeholder="Le prix du  Plat "
+                                        type="number"
+                                        id="price"
+                                />
+                                <mat-icon>euro</mat-icon>
+                                <div *ngIf="submitted && f['price'].errors" class="invalid-feedback">
+                                    <div *ngIf="f['price'].errors['required']" class="center"> le prix du plat est
+                                        requis
+                                    </div>
+                                    <div *ngIf="f['price'].errors['min']" class="center"> le prix du plat doit être
+                                        supérieur à 0.01 euro
+                                    </div>
+                                    <div *ngIf="f['price'].errors['max']" class="center"> le prix du plat doit être
+                                        inférieur strictement à 1000 euro
+                                    </div>
+                                </div>
+
+                            </div>
+
+
+                        </div>
+
+
+                        <!---------------------- Quantity --------------------------->
+                        <div class="form-group">
+                            <label for="quantity">Le quatité </label>
+                            <input [ngClass]="{ 'is-invalid': submitted && f['quantity'].errors }" class="form-control"
+                                   formControlName="quantity"
+                                   placeholder="Le quatité des plats  disponible "
+                                   type="number"
+                                   id="quantity"
+                            />
+                            <div *ngIf="submitted && f['quantity'].errors" class="invalid-feedback">
+                                <div *ngIf="f['quantity'].errors['required']" class="center"> La quantité est requis
+                                </div>
+                                <div *ngIf="f['quantity'].errors['pattern']" class="center">la quantité est un entier positive
+                                </div>
+                                <div *ngIf="f['quantity'].errors['min']" class="center">la quantité doit être supérieur
+                                    à 0
+                                </div>
+                                <div *ngIf="f['quantity'].errors['max']" class="center"> la quantité doit être inférieur
+                                    strictement à 2147483500
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="form-group">
+                            <label for="category"> Catégorie </label>
+                            <select formControlName="category" class="form-control" id="category"
+                                    [ngClass]="{ 'is-invalid': submitted && f['category'].errors }" name="category">
+                                <option value="" disabled>-- Catégorie Du Plat --</option>
+                                <option value="Hamburgers">Hamburgers</option>
+                                <option value="Nuggets de poulet">Nuggets de poulet</option>
+                                <option value="Volailles cuites">Volailles cuites</option>
+                                <option value="Viandes">Viandes</option>
+                                <option value="Plats à la volaille">Plats à la volaille</option>
+                                <option value="Poulets">Poulets</option>
+                            </select>
+                            <div *ngIf="submitted && f['category'].errors" class="invalid-feedback">
+                                <div *ngIf="f['category'].errors['required']" class="center"> une catégorie est
+                                    requise
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <!---------------------- status --------------------------->
+                        <div class="form-group">
+                            <label for="status"> Le plat est t-il disponible ? </label>
+                            <mat-radio-group aria-label="Select an option" id="status"
+                                             [ngClass]="{ 'is-invalid': submitted && f['status'].errors }"
+                                             class="form-control" formControlName="status">
+                                <mat-radio-button value="available"><span> Plat Disponible </span></mat-radio-button>
+                                <mat-radio-button value="unavailable"><span> Plat n'est  Disponible </span>
+                                </mat-radio-button>
+                            </mat-radio-group>
+                            <div *ngIf="submitted && f['status'].errors" class="invalid-feedback">
+                                <div *ngIf="f['status'].errors['required']" class="center"> le status du plat est
+                                    requise
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                             <button class="btn">Ajouter  La List </button>
+
+                        </div>
+
+                        <!---------------------- Image --------------------------->
+                        <div class="form-group">
+                            <label for="image"> Choisissez une image pour le plat </label>
+
+                            <input class="input-group-prepend"
+                                   [ngClass]="{ 'is-invalid': submitted && f['image'].errors }" class="form-control"
+                                   formControlName="image"
+                                   placeholder="Le prix du  Plat "
+                                   type="file"
+                                   id="image"
+                                   accept="image/png, image/jpeg"
+                                   (change)="onChange ($event)"
+                            />
+
+                            <div *ngIf="submitted && f['image'].errors" class="invalid-feedback">
+                                <div *ngIf="f['image'].errors['required']" class="center"> le image du plat est requis
+                                </div>
+                            </div>
+
+                        </div>
+
+
+                        <div class="btns">
+                            <div class="btn-save center">
+                                <button  class="btn"> Enregistrer</button>
+                            </div>
+                            <span><mat-icon>arrow_back</mat-icon></span>
+                        </div>
+
+                    </form>
+                    <div>
+
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+
