--- a/Frontend/Cantine/src/app/admin/menus/all-menus/all-menus.component.html
+++ b/Frontend/Cantine/src/app/admin/menus/all-menus/all-menus.component.html
@@ -1,22 +1,23 @@
 <div class="center" style="margin: 20px">
     <button class="btn" (click)="addMenu()">Ajouter un  Menu </button>
 </div>
-<div class="container">
+
+<div class="container" *ngIf="(menus$ | async) as menus; else loadingTemplate" >
     <div class="row">
-        <div *ngFor="let menu of menus$ | async " class="col m4 s12">
+      <div *ngFor="let menu of menus$ | async " class="col m4 s12">
             <div>
                 <div class="card horizontal ">
-                        <img [src]="menu.image" height="190px" width="40%"/>
+                    <img [src]="menu.image" height="190px" width="40%"/>
 
-                        <div class="card-stacked">
-                            <div class="card-content">
-                                <p> plat :   {{menu.label}}</p>
-                                <p> description : {{menu.description}}</p>
-                                <p> prix : {{menu.price | euroSymbol }}  </p>
-                                <p><span *ngIf="menu.status == 1">  Disponible  </span><span *ngIf="menu.status == 0 ">  Pas  Disponible  </span>
-                                </p>
-                            </div>
-                                  <p  class="center" style="color: #004a9f">   voir Plus  </p>
+                    <div class="card-stacked">
+                        <div class="card-content">
+                            <p> plat :   {{menu.label}}</p>
+                            <p> description : {{menu.description}}</p>
+                            <p> prix : {{menu.price | euroSymbol }}  </p>
+                            <p><span *ngIf="menu.status == 1">  Disponible  </span><span *ngIf="menu.status == 0 ">  Pas  Disponible  </span>
+                            </p>
+                        </div>
+                        <p  class="center" style="color: #004a9f">   voir Plus  </p>
 
                         <div>
                             <button class="btn" (click)="updateMenu(menu.id)" > Modifier Le Menus </button>
@@ -27,3 +28,21 @@
         </div>
     </div>
 </div>
+
+
+<ng-template #loadingTemplate >
+    <!-- Afficher le spinner ici pendant le chargement -->
+    <div class="spinner-container">
+        <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+    </div>
+
+</ng-template>
+
+<style>
+    .spinner-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 15vh;
+    }
+</style>
